Add page-viewing apparatus; JSONize Buffers as strings

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "http-enhanced": "*",
     "lodash": "*",
     "loge": "*",
+    "pdf": "*",
     "regex-router": "*",
     "send": "*",
     "yargs": "*"
