Add lexing as a dependency and try to lex buffers into stack operations in the file controller's 'object' action

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "async": "*",
     "formidable": "*",
     "http-enhanced": "*",
+    "lexing": "*",
     "lodash": "*",
     "loge": "*",
     "pdf": "*",
