Improvements all-round.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lodash": "*",
     "mocha": "*",
     "typescript": "*",
-    "virtual-dom": "*"
+    "virtual-dom": "*",
+    "watchify": "*"
   },
   "staticPattern": "lib/{file}",
   "staticDependencies": {
