Add 'make dev' command to chain tsc+watchify

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "devDependencies": {
     "browserify": "*",
     "mocha": "*",
-    "typescript": "*"
+    "typescript": "*",
+    "watchify": "*"
   },
   "staticPattern": "lib/{file}",
   "staticDependencies": {
