--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "private": true,
   "dependencies": {
     "academia": "*",
-    "arrays": "chbrown/arrays",
+    "@chbrown/arrays": "*",
     "flow-copy": "*",
     "history": "*",
     "httprequest": "*",
@@ -53,7 +53,7 @@
     "redux-router": "latest",
     "style-loader": "*",
     "ts-loader": "*",
-    "typescript": "next",
+    "typescript": "1.7.0-dev.20151006",
     "watsh": "*",
     "webpack": "*",
     "webpack-dev-middleware": "*",
