Clean up components (resolve eslint warnings/errors); use fetch instead of httprequest; simplify TypeScript declarations import

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
   },
   "files": [
     "models.ts",
-    "components/common.ts",
-    "type_declarations/index.d.ts"
+    "components/common.ts"
   ]
 }
