Replace @chbrown/arrays with tarry; pin babel to ^5; replace object-assign with object spread syntax

--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
   "private": true,
   "dependencies": {
     "academia": "*",
-    "@chbrown/arrays": "*",
     "history": "*",
     "lexing": "*",
-    "object-assign": "*",
     "pdfi": "*",
     "react": "*",
     "react-dom": "*",
     "react-redux": "*",
     "redux": "*",
     "redux-router": "latest",
+    "tarry": "*",
     "visible": "*"
   },
   "devDependencies": {
-    "babel-core": "*",
-    "babel-loader": "*",
+    "babel-core": "^5.0.0",
+    "babel-loader": "^5.0.0",
     "babel-plugin-react-transform": "*",
     "css-loader": "*",
+    "declarations": "*",
     "express": "*",
     "json-loader": "*",
     "less": "*",
