Move from redux-router -> redux-simple-router; implement lots of stateless functional component modernizations

--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     "react": "*",
     "react-dom": "*",
     "react-redux": "*",
+    "react-router": "next",
     "redux": "*",
-    "redux-router": "latest",
+    "redux-simple-router": "*",
     "tarry": "*",
     "visible": "*"
   },
   "devDependencies": {
     "babel-core": "^5.0.0",
     "babel-loader": "^5.0.0",
-    "babel-plugin-react-transform": "*",
+    "babel-plugin-react-transform": "^1.1.0",
     "css-loader": "*",
     "declarations": "*",
     "express": "*",
@@ -40,14 +41,11 @@
     "less": "*",
     "less-loader": "*",
     "react-hot-loader": "*",
-    "react-router": "^1.0.0-rc1",
-    "react-transform-catch-errors": "*",
     "react-transform-hmr": "*",
-    "redbox-react": "*",
     "redux-devtools": "*",
     "style-loader": "*",
     "ts-loader": "*",
-    "typescript": "1.7.0-dev.20151006",
+    "typescript": "next",
     "webpack": "*",
     "webpack-dev-middleware": "*",
     "webpack-dev-server": "*",
