--- a/.babelrc
+++ b/.babelrc
@@ -1,17 +1,17 @@
 {
-  "stage": 0,
+  "presets": ["es2015", "stage-1", "react"],
+  "plugins": [
+    "transform-decorators-legacy"
+  ],
   "env": {
     "development": {
-      "plugins": ["react-transform"],
-      "extra": {
-        "react-transform": {
-          "transforms": [{
-            "transform": "react-transform-hmr",
-            "imports": ["react"],
-            "locals": ["module"]
-          }]
-        }
-      }
+      "plugins": [["react-transform", {
+        "transforms": [{
+          "transform": "react-transform-hmr",
+          "imports": ["react"],
+          "locals": ["module"]
+        }]
+      }]]
     }
   }
 }
