--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "visible": "*"
   },
   "devDependencies": {
-    "babel-core": "^5.0.0",
-    "babel-loader": "^5.0.0",
-    "babel-plugin-react-transform": "^1.1.0",
+    "babel-core": "*",
+    "babel-loader": "*",
+    "babel-preset-es2015": "*",
+    "babel-preset-stage-1": "*",
+    "babel-preset-react": "*",
+    "babel-plugin-react-transform": "*",
+    "babel-plugin-transform-decorators-legacy": "*",
     "css-loader": "*",
     "declarations": "*",
     "express": "*",
@@ -42,10 +46,8 @@
     "less-loader": "*",
     "react-hot-loader": "*",
     "react-transform-hmr": "*",
-    "redux-devtools": "*",
     "style-loader": "*",
-    "ts-loader": "*",
-    "typescript": "next",
+    "typescript": "*",
     "webpack": "*",
     "webpack-dev-middleware": "*",
     "webpack-dev-server": "*",
