Match upstream API changes like lexing.Buffer externalization and new Buffer-based machine states

--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "react-router": "*",
     "react-router-redux": "*",
     "redux": "*",
-    "tarry": "*",
-    "visible": "*"
+    "tarry": "*"
   },
   "devDependencies": {
     "babel-core": "*",
