--- a/package.json
+++ b/package.json
@@ -17,34 +17,34 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "academia": "*",
-    "history": "*",
-    "lexing": "*",
-    "pdfi": "*",
-    "react": "*",
-    "react-dom": "*",
-    "react-redux": "*",
-    "react-router": "*",
-    "react-router-redux": "*",
-    "redux": "*",
-    "tarry": "*"
+    "academia": "0.4.2",
+    "history": "2.0.1",
+    "lexing": "0.8.0",
+    "pdfi": "0.9.2",
+    "react": "15.0.1",
+    "react-dom": "15.0.1",
+    "react-redux": "4.4.2",
+    "react-router": "2.0.1",
+    "react-router-redux": "4.0.2",
+    "redux": "3.4.0",
+    "tarry": "0.3.1"
   },
   "devDependencies": {
-    "babel-core": "*",
-    "babel-loader": "*",
-    "babel-preset-es2015": "*",
-    "babel-plugin-react-transform": "*",
-    "css-loader": "*",
-    "declarations": "*",
-    "express": "*",
-    "json-loader": "*",
-    "less": "*",
-    "less-loader": "*",
-    "react-transform-hmr": "*",
-    "style-loader": "*",
-    "typescript": "*",
-    "webpack": "*",
-    "webpack-dev-middleware": "*",
-    "webpack-hot-middleware": "*"
+    "babel-core": "6.7.6",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-plugin-react-transform": "2.0.2",
+    "css-loader": "0.23.1",
+    "declarations": "0.1.15",
+    "express": "4.13.4",
+    "json-loader": "0.5.4",
+    "less": "2.6.1",
+    "less-loader": "2.2.3",
+    "react-transform-hmr": "1.0.4",
+    "style-loader": "0.13.1",
+    "typescript": "1.8.9",
+    "webpack": "1.12.14",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-hot-middleware": "2.10.0"
   }
 }
