--- a/package.json
+++ b/package.json
@@ -17,34 +17,44 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "academia": "0.4.2",
-    "history": "2.0.1",
-    "lexing": "0.8.0",
-    "pdfi": "0.9.2",
-    "react": "15.0.1",
-    "react-dom": "15.0.1",
-    "react-redux": "4.4.2",
-    "react-router": "2.0.1",
-    "react-router-redux": "4.0.2",
-    "redux": "3.4.0",
-    "tarry": "0.3.1"
+    "academia": "0.4.3",
+    "connected-react-router": "4.3.0",
+    "history": "4.7.2",
+    "lexing": "0.8.2",
+    "pdfi": "0.9.6",
+    "prop-types": "15.6.2",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
+    "react-redux": "5.0.7",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
+    "redux": "4.0.0",
+    "tarry": "0.3.4"
   },
   "devDependencies": {
-    "babel-core": "6.7.6",
-    "babel-loader": "6.2.4",
-    "babel-preset-es2015": "6.6.0",
-    "babel-plugin-react-transform": "2.0.2",
-    "css-loader": "0.23.1",
-    "declarations": "0.1.15",
-    "express": "4.13.4",
-    "json-loader": "0.5.4",
-    "less": "2.6.1",
-    "less-loader": "2.2.3",
-    "react-transform-hmr": "1.0.4",
-    "style-loader": "0.13.1",
-    "typescript": "1.8.9",
-    "webpack": "1.12.14",
-    "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.10.0"
+    "@types/node": "10.5.2",
+    "@types/prop-types": "15.5.3",
+    "@types/react": "16.4.6",
+    "@types/react-dom": "16.0.6",
+    "@types/react-redux": "6.0.3",
+    "@types/react-router": "4.0.28",
+    "@types/react-router-dom": "4.2.7",
+    "ajv": "6.5.2",
+    "babel-core": "6.26.3",
+    "babel-loader": "7.1.5",
+    "babel-preset-env": "1.7.0",
+    "css-loader": "1.0.0",
+    "less": "3.5.3",
+    "less-loader": "4.1.0",
+    "style-loader": "0.21.0",
+    "typescript": "2.9.2",
+    "webpack": "4.15.1",
+    "webpack-cli": "3.0.8"
+  },
+  "scripts": {
+    "prepare": "tsc",
+    "prepack": "NODE_ENV=production webpack --config webpack.config.js",
+    "start": "tsc --watch & webpack --config webpack.config.js --watch",
+    "clean": "tsc --listEmittedFiles | grep '^TSFILE: ' | sed 's/^TSFILE: //' | xargs rm -v build/bundle.js"
   }
 }
