--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "private": true,
   "dependencies": {
     "academia": "0.4.3",
+    "babel-polyfill": "6.26.0",
     "connected-react-router": "4.3.0",
     "history": "4.7.2",
     "lexing": "0.8.2",
