Clean up a little before deploy
(Taking it easy on GitHub)

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - 10
 script: npm run build
+before_deploy:
+  - rm -rf node_modules
 deploy:
   provider: pages
   skip-cleanup: true
